# For when Python 3.3 is out :)
[metadata]
name=color
version=0.1
license=BSD
author=Tres Walsh
home-page=https://github.com/sahchandler/color
project-url=
  github, https://github.com/sahchandler/color
  issue tracker, https://github.com/sahchandler/color/issues
keywords=color color-printing minimal small
summary=Very small color printing module
description-file=Readme.rst
requires-python= >=3.2
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3

[files]
packages =
    color

extra_files =
    Readme.rst
    setup.py
